deployment.yml
Parameters:
  VPC:
    Description: VPC on AWS
    Type: String

  EC2Image:
    Description: EC2 Image ID on AWS
    Type: String

  EC2Key:
    Description: EC2 Key Name on AWS
    Type: String

  PublicSubnetId:
    Description: PublicSubnetId
    Type: String


Resources:
  MyEC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref EC2Image
      KeyName: !Ref EC2Key
      InstanceType: t3a.medium
      NetworkInterfaces:
        - AssociatePublicIpAddress: true
          DeviceIndex: "0"
          GroupSet: 
            - Ref: "myVPCEC2SecurityGroup"
          SubnetId: 
            Ref: "PublicSubnetId"
      UserData:
        Fn::Base64: 
          !Sub |
            #!/bin/bash -xe
            sudo apt update && sudo apt upgrade -y
            sudo apt install conntrack -y
            curl -LO https://storage.googleapis.com/kubernetes-release/release/`curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt`/bin/linux/amd64/kubectl
            chmod +x ./kubectl
            sudo mv ./kubectl /usr/local/bin/kubectl
            sudo apt-get update && sudo apt-get install docker.io -y
            curl -Lo minikube https://storage.googleapis.com/minikube/releases/latest/minikube-linux-amd64 && chmod +x minikube && sudo mv minikube /usr/local/bin/
            sudo minikube start --vm-driver=none
            sudo apt install default-jdk -y
            wget -q -O - https://pkg.jenkins.io/debian/jenkins.io.key | sudo apt-key add -
            sudo sh -c 'echo deb http://pkg.jenkins.io/debian-stable binary/ > /etc/apt/sources.list.d/jenkins.list'
            sudo apt update && sudo apt install jenkins -y
            sudo apt-get install pylint -y
            wget -O /bin/hadolint https://github.com/hadolint/hadolint/releases/download/v1.18.0/hadolint-Linux-x86_64 && chmod +x /bin/hadolint
                	   
  myVPCEC2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow http to our hosts and SSH from local only
      VpcId: !Ref VPC
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 8080
        ToPort: 8080
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
      - IpProtocol: tcp
        FromPort: 0
        ToPort: 65535
        CidrIp: 0.0.0.0/0
